--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,6 +3,6 @@ current_version = 0.0.2
 commit = True
 tag = True
 
-[bumpversion:README.md]
+[bumpversion:file:README.md]
 search = Version `{current_version}`
 replace = Version `{new_version}`
