added terraform init to cloud build

--- a/ci_cd/push_to_branch.cloudbuild.yaml
+++ b/ci_cd/push_to_branch.cloudbuild.yaml
@@ -9,6 +9,12 @@
         echo "-------------------------"
         echo "$BRANCH_NAME"
         echo "-------------------------"
+
+  - id: 'terraform-init'
+    name: 'hashicorp/terraform:1.0.0'
+    - '-c'
+    - | 
+        terraform init
     
 options:
   logging: CLOUD_LOGGING_ONLY
