--- a/ci_cd/push_to_branch.cloudbuild.yaml
+++ b/ci_cd/push_to_branch.cloudbuild.yaml
@@ -12,10 +12,7 @@
 
   - id: 'terraform-init'
     name: 'hashicorp/terraform:1.0.0'
-    args:
-    - '-c'
-    - | 
-        terraform init
+    script: terraform init
     
 options:
   logging: CLOUD_LOGGING_ONLY
