--- a/ci_cd/push_to_branch.cloudbuild.yaml
+++ b/ci_cd/push_to_branch.cloudbuild.yaml
@@ -12,7 +12,11 @@
 
   - id: 'terraform-init'
     name: 'hashicorp/terraform:1.0.0'
-    script: terraform init
+    entrypoint: bash
+    args:
+    - '-c'
+    - | 
+        terraform init
     
 options:
   logging: CLOUD_LOGGING_ONLY
