--- a/ci_cd/push_to_branch.cloudbuild.yaml
+++ b/ci_cd/push_to_branch.cloudbuild.yaml
@@ -12,7 +12,7 @@
 
   - id: 'terraform-init'
     name: 'hashicorp/terraform:1.0.0'
-    entrypoint: bash
+    entrypoint: 'sh'
     args:
     - '-c'
     - | 
