--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -6,3 +6,7 @@ tag = True
 [bumpversion:file:README.md]
 search = Version `{current_version}`
 replace = Version `{new_version}`
+
+[bumpversion:file:ci_cd\push_to_branch.cloudbuild.yaml]
+search = :{current_version} \
+replace = :{new_version} \
