--- a/ci_cd/push_to_branch.cloudbuild.yaml
+++ b/ci_cd/push_to_branch.cloudbuild.yaml
@@ -10,6 +10,17 @@
         echo "$BRANCH_NAME"
         echo "-------------------------"
 
+  - id: 'publish-dockerfile'
+    name: 'gcr.io/cloud-builders/docker'
+    entrypoint: bash
+    args:
+      - '-c'
+      - |
+        docker build \
+          -t europe-west1-docker.pkg.dev/${PROJECT_ID}/cloud-run-containers/weather-api:latest \
+          -t europe-west1-docker.pkg.dev/${PROJECT_ID}/cloud-run-containers/weather-api:0.0.3 \
+          -f app/Dockerfile
+
   - id: 'terraform-init'
     name: 'hashicorp/terraform:1.0.0'
     entrypoint: 'sh'
@@ -33,6 +44,8 @@
     - '-c'
     - | 
         terraform apply --auto-approve
-    
+
+images: ['europe-west1-docker.pkg.dev/${PROJECT_ID}/cloud-run-containers/weather-api']
+
 options:
   logging: CLOUD_LOGGING_ONLY
