--- a/ci_cd/push_to_branch.cloudbuild.yaml
+++ b/ci_cd/push_to_branch.cloudbuild.yaml
@@ -21,13 +21,13 @@
           -t europe-west1-docker.pkg.dev/${PROJECT_ID}/cloud-run-containers/weather-api:0.1.0 \
           -f app/Dockerfile .
 
-  - id: 'terraform-init'
-    name: 'hashicorp/terraform:1.0.0'
-    entrypoint: 'sh'
-    args:
-    - '-c'
-    - | 
-        terraform init
+  # - id: 'terraform-init'
+  #   name: 'hashicorp/terraform:1.0.0'
+  #   entrypoint: 'sh'
+  #   args:
+  #   - '-c'
+  #   - | 
+  #       terraform init
 
   - id: 'terraform-plan'
     name: 'hashicorp/terraform:1.0.0'
