--- a/ci_cd/push_to_branch.cloudbuild.yaml
+++ b/ci_cd/push_to_branch.cloudbuild.yaml
@@ -27,7 +27,7 @@
     args:
     - '-c'
     - | 
-        terraform destroy
+        terraform init
 
   # - id: 'terraform-plan'
   #   name: 'hashicorp/terraform:1.0.0'
