--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,6 +7,6 @@ tag = True
 search = Version `{current_version}`
 replace = Version `{new_version}`
 
-[bumpversion:file:ci_cd\push_to_branch.cloudbuild.yaml]
+[bumpversion:file:ci_cd\publish_dockerfile.cloudbuild.yaml]
 search = :{current_version} \
 replace = :{new_version} \
