--- a/ci_cd/publish_dockerfile.cloudbuild.yaml
+++ b/ci_cd/publish_dockerfile.cloudbuild.yaml
@@ -1,5 +1,6 @@
 ﻿steps:
 
+  # Publish dockerfile to artifact registry
   - id: 'publish-dockerfile'
     name: 'gcr.io/cloud-builders/docker'
     entrypoint: bash
