--- a/ci_cd/publish_dockerfile.cloudbuild.yaml
+++ b/ci_cd/publish_dockerfile.cloudbuild.yaml
@@ -13,3 +13,6 @@
           -f app/Dockerfile .
 
 images: ['europe-west1-docker.pkg.dev/${PROJECT_ID}/cloud-run-containers/weather-api']
+
+options:
+  logging: CLOUD_LOGGING_ONLY
